--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="baidu-site-verification" content="3k377DdbZl" />
 	<title>MOLIN网站正在筹划中……</title>
 	<style>
 	*{margin: 0;padding:0;}
