--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<！DOCTYPE html>
+< html  lang = “en” >
 <head>
+	<link rel=”alternate” media=”only screen and (max-width: 640px)” href=”./m.index.html”>
 	<meta name="baidu-site-verification" content="3k377DdbZl" />
 	<meta charset="UTF-8">
 	<title>MOLIN网站正在筹划中……</title>
