--- a/m.index.html
+++ b/m.index.html
@@ -1,7 +1,6 @@
 <！DOCTYPE html>
-< html  lang = “en” >
 <head>
-	<link rel=”canonical” href=”./index.html”>
+	<link rel=”canonical” href=”http://molincheng.molinseo.top/index.html”>
 	<meta charset="UTF-8">
 	<title>MOLIN网站正在筹划中……</title>
 	<style>
@@ -15,7 +14,4 @@
 	<h1>我是移动端</h1>
 	</div>
 </body>
-</html></html>
-<?php
-echo "Hello World!";
-?>
+</html>
