--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <！DOCTYPE html>
-< html  lang = “en” >
 <head>
-	<link rel=”alternate” media=”only screen and (max-width: 640px)” href=”./m.index.html”>
+	<link rel=”alternate” media=”only screen and (max-width: 640px)” href=”http://molincheng.molinseo.top/m.index.html”>
 	<meta name="baidu-site-verification" content="3k377DdbZl" />
 	<meta charset="UTF-8">
 	<title>MOLIN网站正在筹划中……</title>
@@ -17,8 +16,4 @@
 	<h1>站长联系QQ:1030658764</h1>
 	</div>
 </body>
-</html></html>
-<?php
-echo "Hello World!";
-?>
-
+</html>
